syntax = "proto3";

package users;

// Define service
service Users {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (User);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string userId = 1;
}

message DeleteUserRequest {
  string userId = 1;
}

message DeleteUserResponse {}

message UpdateUserRequest {
  string userId = 1;
  string name = 2;
  string email = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}